# Tanki

./: CMakeLists.txt  LICENSE  README.md
assets/: example.csv
src/: App.cpp  App.hpp  Card.cpp  Card.hpp  Deck.cpp  Deck.hpp  FileManager.cpp  FileManager.hpp  SM2Scheduler.cpp  SM2Scheduler.hpp  Stats.cpp  Stats.hpp  UI.cpp  UI.hpp  main.cpp
